pkl-core/src/test/files/LanguageSnippetTests/input/errors/listingTypeCheckError5.pkl
local l = new Listing { 1; 2; 3 } as Listing<String>

res = l[0]

